fix alignment of see more button
not sure why this was there in the first place

--- a/app/assets/stylesheets/modules/_articles.styl
+++ b/app/assets/stylesheets/modules/_articles.styl
@@ -54,7 +54,6 @@
   .pagination
     grid-area: pagination-controls
     justify-self: start
-    margin-top: 20px
   
   .articles-see-more-btn
     grid-area: see-more-btn
